# oz_02_main-003-BE

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 냉뚝-be--이슈-템플릿.md
.github/workflows/: deploy-dev-ncp.yml
app/alerts/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/alerts/migrations/: 0001_initial.py  0002_alter_alert_status_alter_alert_type.py  0003_remove_alert_user_alert_target_user_and_more.py  0004_alter_alert_status.py
app/bookmarks/: models.py  urls.py  views.py
app/bookmarks/migrations/: 0001_initial.py
app/collabo/: apps.py  models.py  urls.py  views.py
app/collabo/migrations/: 0001_initial.py  0002_alter_interaction_type.py  0003_group_alter_interaction_recipe_and_more.py
app/collabo/utils/: category_recipe.py  interaction_utils.py  save_similary.py  similary_utils.py  utils.py
app/comments/: models.py  urls.py  views.py
app/common/: exceptions.py  models.py
app/common/data/: envdata.py
app/config/: asgi.py  settings.py  urls.py
app/fridges/: apps.py  models.py  urls.py  views.py
app/gunicorn/: gunicorn_config.py
app/ingredients/: apps.py  models.py  urls.py  views.py
app/likes/: models.py  urls.py  views.py
app/main/: serializers.py  urls.py  views.py
app/recipes/: apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
app/users/: models.py  serializers.py  services.py  urls.py  utils.py  views.py
proxy/: Dockerfile  ndd.conf  ndd.life.conf  nddapp.duckdns.org.conf  nginx.conf  run.sh
scripts/: run.sh
(+36 files in other folders)
