[tool.poetry]
name = "ndd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
djangorestframework-camel-case = "^1.4.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
boto3 = "^1.34.124"
django-storages = "^1.14.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
